// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsPollTemplate it should render with a number and question 1`] = `
MediaWikiTemplate {
  "children": undefined,
  "name": "News Poll",
  "params": Array [
    Object {
      "key": "",
      "value": "5",
    },
    Object {
      "key": "",
      "value": "test?",
    },
  ],
}
`;

exports[`NewsPollTemplate it should render with only a question 1`] = `
MediaWikiTemplate {
  "children": undefined,
  "name": "News Poll",
  "params": Array [
    Object {
      "key": "qtext",
      "value": "test?",
    },
  ],
}
`;
